# AgentVCS

./: LICENSE  README.md  agentvcsdummy.js  example_demo.py  index.html  nanodummy.js  pyproject.toml
.github/workflows/: main.yml
docs/: agent-api.md  developer-guide.md  event-streaming.md  policy-config.md
src/agentvcs/: __init__.py  cli.py  models.py
src/agentvcs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/agentvcs/agents/: __init__.py  base.py  registry.py
src/agentvcs/core/: __init__.py  storage.py
src/agentvcs/events/: __init__.py  stream.py
src/agentvcs/graph/: __init__.py  builder.py
src/agentvcs/merge/: __init__.py  engine.py
src/agentvcs/policy/: __init__.py  engine.py
