[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentvcs"
version = "1.7.0"
description = "The world's first agentic version control system"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "live-by-unix", email = "hyperpixel189@outlook.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "gitpython>=3.1.0",
    "networkx>=3.0",
    "aiohttp>=3.8.0",
    "watchdog>=3.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
agentvcs = "agentvcs.cli:main"

[project.urls]
Homepage = "https://github.com/live-by-unix/agentvcs"
Documentation = "https://github.com/live-by-unix/AgentVCS/blob/main/README.md"
Repository = "https://github.com/agentvcs/agentvcs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
